--- a/gb/19/10/31/n11623608.md
+++ b/gb/19/10/31/n11623608.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/emwkhk352/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/emwkhk352/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/emwkhk352/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/emwkhk352/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/emwkhk352/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/emwkhk352/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/emwkhk352/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/emwkhk352/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/emwkhk352/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/emwkhk352/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/emwkhk352/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/emwkhk352/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/emwkhk352/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/emwkhk352/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/emwkhk352/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/emwkhk352/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/emwkhk352/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/emwkhk352/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/emwkhk352/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/emwkhk352/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/emwkhk352/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/emwkhk352/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/emwkhk352/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/emwkhk352/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/emwkhk352/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/emwkhk352/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/emwkhk352/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/emwkhk352/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/emwkhk352/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/emwkhk352/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/emwkhk352/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/emwkhk352/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/emwkhk352/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/emwkhk352/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/emwkhk352/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/emwkhk352/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/emwkhk352/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/emwkhk352/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/emwkhk352/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/emwkhk352/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/emwkhk352/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/emwkhk352/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/emwkhk352/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/emwkhk352/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/emwkhk352/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/emwkhk352/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/emwkhk352/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xsumwp3307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>香港首席法官马道立：要学包容尊重及妥协</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/10/1910302049401538-600x400.jpg" />
 <h6>马道立表示，学生如欲成为未来领袖，最重要是学习社群归属感。（郭威利／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2019年10月31日讯】（大纪元记者祁一一香港综合报导）终审法院首席法官<ahref="https://github.com/emwkhk352/djy/blob/master/gb/tag/%E9%A9%AC%E9%81%93%E7%AB%8B.md#1">马道立</a>表示，法治是社会的基石，而法治与社群意识有直接关系，学生要成为未来领袖，就需要学习法治中的<ahref="https://github.com/emwkhk352/djy/blob/master/gb/tag/%E5%8C%85%E5%AE%B9.md#1">包容</a>、<ahref="https://github.com/emwkhk352/djy/blob/master/gb/tag/%E5%B0%8A%E9%87%8D.md#1">尊重</a>及<ahref="https://github.com/emwkhk352/djy/blob/master/gb/tag/%E5%A6%A5%E5%8D%8F.md#1">妥协</a>，建立社群意识。</p>
-<p><ahref="https://github.com/emwkhk352/djy/blob/master/gb/tag/%E9%A9%AC%E9%81%93%E7%AB%8B.md#1">马道立</a>30日出席香港中学校长会举办的“教育论坛 2019：课程的未来?未来的课程”，他致辞时以“今日学生，明日领袖”为题说，“法治是社会的其中一个基石”，法治精神强调追求自由及权利的同时，要<ahref="https://github.com/emwkhk352/djy/blob/master/gb/tag/%E5%B0%8A%E9%87%8D.md#1">尊重</a>别人和社会。有关法治最常见的问题是法治的涵义，以及如何证明法治真正存在。他提到，《基本法》确保港人享有投票或参选等基本权利，以及言论、宗教、新闻自由，证明法治在本港真实存在。</p>
+	<p>【大纪元2019年10月31日讯】（大纪元记者祁一一香港综合报导）终审法院首席法官<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E9%A9%AC%E9%81%93%E7%AB%8B.md#1">马道立</a>表示，法治是社会的基石，而法治与社群意识有直接关系，学生要成为未来领袖，就需要学习法治中的<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%8C%85%E5%AE%B9.md#1">包容</a>、<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%B0%8A%E9%87%8D.md#1">尊重</a>及<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%A6%A5%E5%8D%8F.md#1">妥协</a>，建立社群意识。</p>
+<p><ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E9%A9%AC%E9%81%93%E7%AB%8B.md#1">马道立</a>30日出席香港中学校长会举办的“教育论坛 2019：课程的未来?未来的课程”，他致辞时以“今日学生，明日领袖”为题说，“法治是社会的其中一个基石”，法治精神强调追求自由及权利的同时，要<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%B0%8A%E9%87%8D.md#1">尊重</a>别人和社会。有关法治最常见的问题是法治的涵义，以及如何证明法治真正存在。他提到，《基本法》确保港人享有投票或参选等基本权利，以及言论、宗教、新闻自由，证明法治在本港真实存在。</p>
 <p>他还提到，在本港法官的誓词中，提及他们要守法、秉持操守、正直处理案件，这些均体现司法独立的关键。</p>
-<p>马道立又指，学生要成为未来领袖，最重要是学习社群归属感。社群归属感的根本包括<ahref="https://github.com/emwkhk352/djy/blob/master/gb/tag/%E5%8C%85%E5%AE%B9.md#1">包容</a>、尊重及<ahref="https://github.com/emwkhk352/djy/blob/master/gb/tag/%E5%A6%A5%E5%8D%8F.md#1">妥协</a>，这三项质素亦是学生欲成为未来领袖时需要的条件。而教育是培育年轻人有关社群意识的途径，如何让学生学习这个新概念很重要。</p>
+<p>马道立又指，学生要成为未来领袖，最重要是学习社群归属感。社群归属感的根本包括<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%8C%85%E5%AE%B9.md#1">包容</a>、尊重及<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%A6%A5%E5%8D%8F.md#1">妥协</a>，这三项质素亦是学生欲成为未来领袖时需要的条件。而教育是培育年轻人有关社群意识的途径，如何让学生学习这个新概念很重要。</p>
 <p>香港大学校长张翔则在致辞时表示，留意到近期社会运动（反送中运动）中，网民透过互联网很快速、有效率及民主地作出决定，无论你是否喜欢，这个趋势正在来临。身处资讯爆炸的时代，未来的教育方向，教师应该重视培育学生的创新想法及沟通能力。</p>
 <h2>理大生戴“V煞面具”抗议</h2>
 <p>另外，理工大学约100名学生及毕业生30日下午在校园发起快闪游行，沿着校园饭堂至民主墙，途经百步梯，然后返回起点。</p>
@@ -27,41 +27,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/emwkhk352/djy/blob/master/gb/10/12/6/n3105469.md#1">香港首席法官 维护公义社会</a></li>
-<li><a href="https://github.com/emwkhk352/djy/blob/master/gb/14/1/14/n4058913.md#1">香港首席法官向中共说不 强调三权分立</a></li>
-<li><a href="https://github.com/emwkhk352/djy/blob/master/gb/14/8/17/n4226775.md#1">香港首席法官强调司法独立 律师会罢免媚共会长</a></li>
-<li><a href="https://github.com/emwkhk352/djy/blob/master/gb/16/12/2/n8550469.md#1">香港首席法官马道立指尊重是法治核心</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/12/6/n3105469.md#1">香港首席法官 维护公义社会</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/14/1/14/n4058913.md#1">香港首席法官向中共说不 强调三权分立</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/14/8/17/n4226775.md#1">香港首席法官强调司法独立 律师会罢免媚共会长</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/12/2/n8550469.md#1">香港首席法官马道立指尊重是法治核心</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/23/n10420856.md#1" target="_blank">林辉：李大钊误导北大学生同时也在卖国</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/23/n10081583.md#1" target="_blank">九旬老太自己洗衣做饭 打破医生20年前判定</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/10/n10043633.md#1" target="_blank">叶光庭：共产党把我从“左派”改造成“右派”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/27/n10092593.md#1" target="_blank">大学教授修炼身心受益 反迫害控告江泽民</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/emwkhk352/djy/blob/master/gb/21/11/21/n13389701.md#1">清朝转世奇闻 才子前世或是毒龙</a></li>
-<li><a href="https://github.com/emwkhk352/djy/blob/master/gb/21/11/23/n13393809.md#1">【百年真相】公安局长扬帆被失踪 25年音信全无</a></li>
-<li><a href="https://github.com/emwkhk352/djy/blob/master/gb/21/11/23/n13392680.md#1">“指名道姓”为何是粗鲁无礼的行为？</a></li>
-<li><a href="https://github.com/emwkhk352/djy/blob/master/gb/21/11/19/n13386805.md#1">【未解之谜】外星人访谈录（3）监狱地球</a></li>
-<li><a href="https://github.com/emwkhk352/djy/blob/master/gb/21/11/19/n13386938.md#1">【百年真相】80岁被逼扫街 梁启超夫人文革受辱</a></li>
-<li><a href="https://github.com/emwkhk352/djy/blob/master/gb/21/11/26/n13401239.md#1">【方菲访谈】程晓农：中共“新时代”针对美国</a></li>
-<li><a href="https://github.com/emwkhk352/djy/blob/master/gb/21/11/26/n13401277.md#1">【秦鹏直播】南非出现新变种 美英等发旅行禁令</a></li>
-<li><a href="https://github.com/emwkhk352/djy/blob/master/gb/21/11/26/n13400951.md#1">【军事热点】英意航母 F-35战斗机交互登舰</a></li>
-<li><a href="https://github.com/emwkhk352/djy/blob/master/gb/21/11/24/n13396382.md#1">【探索时分】歼10击落F22？盘点四大军事假新闻</a></li>
-<li><a href="https://github.com/emwkhk352/djy/blob/master/gb/21/11/25/n13398359.md#1">外媒对张高丽大起底 聚焦其下场将如何</a></li>
-<li><a href="https://github.com/emwkhk352/djy/blob/master/gb/21/11/24/n13396474.md#1">【时事军事】中共克星GPI  比高超音速导弹还快</a></li>
-<li><a href="https://github.com/emwkhk352/djy/blob/master/gb/21/11/26/n13399615.md#1">李天柱：希望电视台别再重播《甄嬛传》</a></li>
-<li><a href="https://github.com/emwkhk352/djy/blob/master/gb/21/11/25/n13399067.md#1">刘诗诗产后复出档期少 友人爆背后暖心原因</a></li>
-<li><a href="https://github.com/emwkhk352/djy/blob/master/gb/21/11/25/n13398799.md#1">观香港禁片《时代革命》 杜汶泽直呼感恩台湾</a></li>
-<li><a href="https://github.com/emwkhk352/djy/blob/master/gb/21/11/25/n13397948.md#1">林依晨产后首亮相 身形恢复神速气色佳</a></li>
-<li><a href="https://github.com/emwkhk352/djy/blob/master/gb/21/11/25/n13398691.md#1">章子怡晒继女庆生照 小苹果模样获赞像陈妍希</a></li>
-<li><a href="https://github.com/emwkhk352/djy/blob/master/gb/21/11/26/n13400447.md#1">原来咖啡要这样喝 才有燃脂效果</a></li>
-<li><a href="https://github.com/emwkhk352/djy/blob/master/gb/21/11/25/n13398250.md#1">少盐少糖可能是错的？4个常见的饮食误区</a></li>
-<li><a href="https://github.com/emwkhk352/djy/blob/master/gb/21/11/23/n13393778.md#1">新年必吃9种食物 带来健康、好运、事业兴隆</a></li>
-<li><a href="https://github.com/emwkhk352/djy/blob/master/gb/21/11/25/n13397109.md#1">躺着睡觉也能赚钱 他分享5年工作机密</a></li>
-<li><a href="https://github.com/emwkhk352/djy/blob/master/gb/21/11/25/n13397569.md#1">美国男子建1米宽迷你教堂 或打破世界纪录</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740262.md#1">【秦鹏直播】不让戴口罩 李克强和习杠上了？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/19/n13740815.md#1">【微视频】粮价涨多少？美国争论中国关税</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740248.md#1">【远见快评】美媒曝东航坠毁是人为 东航回应</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739318.md#1">备战台海 广东高层会议秘密录音曝光</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739256.md#1">李克强讲话“上墙”党媒争相报 释何信号</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/14/n13736831.md#1">11种营养和饮食 改善成人过动症</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/emwkhk352/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/emwkhk352/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/10/31/n11623608.htm">香港首席法官马道立：要学包容尊重及妥协</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/10/31/n11623608.htm">香港首席法官马道立：要学包容尊重及妥协</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/emwkhk352/djy/blob/master/gb/19/10/31/n11623608.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/emwkhk352/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/emwkhk352/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/emwkhk352/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/emwkhk352/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/emwkhk352/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/emwkhk352/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/emwkhk352/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/emwkhk352/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/emwkhk352/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/emwkhk352/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/emwkhk352/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/emwkhk352/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/emwkhk352/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/emwkhk352/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/emwkhk352/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/emwkhk352/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/emwkhk352/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/emwkhk352/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/emwkhk352/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/emwkhk352/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/emwkhk352/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/emwkhk352/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/emwkhk352/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/emwkhk352/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/emwkhk352/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/emwkhk352/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/emwkhk352/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/emwkhk352/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/emwkhk352/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/emwkhk352/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/emwkhk352/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/emwkhk352/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/emwkhk352/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/emwkhk352/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/emwkhk352/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/emwkhk352/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/emwkhk352/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/emwkhk352/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/emwkhk352/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/emwkhk352/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/emwkhk352/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/emwkhk352/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/emwkhk352/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/emwkhk352/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/emwkhk352/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/emwkhk352/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/emwkhk352/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/emwkhk352/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xsumwp3307/djy/blob/master/gb/19/10/31/n11623608.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
